--- a/semana5/src/public/signup/signup.html
+++ b/semana5/src/public/signup/signup.html
@@ -9,14 +9,14 @@
           required
           minlength="4"
           ng-maxlength="10">
-          <span
-            ng-if="(regForm.firstname.$error.minlength || regForm.firstname.$error.required) && regForm.firstname.$touched">
-            First Name must be at least 4 characters long
-          </span>
-          <span ng-if="regForm.firstname.$error.maxlength && regForm.firstname.$touched">
-            First Name must not be longer than 10 characters
-          </span>
-          <br>
+        <span
+          ng-if="(regForm.firstname.$error.minlength || regForm.firstname.$error.required) && regForm.firstname.$touched">
+          First Name must be at least 4 characters long
+        </span>
+        <span ng-if="regForm.firstname.$error.maxlength && regForm.firstname.$touched">
+          First Name must not be longer than 10 characters
+        </span>
+        <br>
 
         <label>Last Name:</label>
         <input type="text" name="lastname" placeholder="Last Name"
@@ -24,50 +24,50 @@
           required
           minlength="4"
           ng-maxlength="10">
-          <span
-            ng-if="(regForm.lastname.$error.minlength || regForm.lastname.$error.required) && regForm.lastname.$touched">
-            Last Name must be at least 4 characters long
-          </span>
-          <span ng-if="regForm.lastname.$error.maxlength && regForm.lastname.$touched">
-            Last Name must not be longer than 10 characters
-          </span>
-          <br>
+        <span
+          ng-if="(regForm.lastname.$error.minlength || regForm.lastname.$error.required) && regForm.lastname.$touched">
+          Last Name must be at least 4 characters long
+        </span>
+        <span ng-if="regForm.lastname.$error.maxlength && regForm.lastname.$touched">
+          Last Name must not be longer than 10 characters
+        </span>
+        <br>
 
         <label>Email:</label>
         <input type="email" name="email" placeholder="Email"
           ng-model="signup.user.email"
           required>
-          <span ng-if="regForm.email.$invalid && regForm.email.$touched">
-            Must be a valid email address: handle@domain format
-          </span>
-          <br>
+        <span ng-if="regForm.email.$invalid && regForm.email.$touched">
+          Must be a valid email address: handle@domain format
+        </span>
+        <br>
 
         <label>Phone:</label>
         <input type="text" name="phone" placeholder="Phone ##########"
           ng-model="signup.user.phone"
           pattern="(\d{10})">
-          <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
-            Phone must be in the format ##########.
-          </span>
-          <br>
+        <span ng-if="regForm.phone.$invalid && regForm.phone.$touched">
+          Phone must be in the format ##########.
+        </span>
+        <br>
 
-        <label>Favorite Menu Number:</label>
+        <label>Favorite Menu Number:(bonus)</label>
         <input type="text" name="menunumber" placeholder="Favorite Menu Number"
-          ng-model="signup.user.menunumber">
-          <br>
+          ng-model="signup.user.menunumber" ng-blur="signup.validateMenuNumber(signup.user.menunumber)">
+        <span ng-if="!signup.menunumberOk && regForm.menunumber.$touched">
+          No such menu number exists.
+        </span>
+        <br>
 
         <button
-          ng-disabled="regForm.$invalid"
-          ng-click="signup.submit()">Submit</button>
+          ng-disabled="regForm.$invalid || !signup.menunumberOk"
+          ng-click="signup.submit()">Submit
+        </button>
 
       </form>
     </fieldset>
 
     <div id="info" ng-if="signup.completed">
-      First Name: {{ signup.user.firstname}} <br>
-      Last Name: {{ signup.user.lastname}} <br>
-      Email: {{ signup.user.email}} <br>
-      Phone: {{ signup.user.phone }} <br>
-      Menu Item: {{signup.user.menunumber}}
+      Your information has been saved!
     </div>
   </div>
